[tool.poetry]
name = "chastler"
version = "0.1.0"
description = "An application for handling media"
authors = ["7db9a"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.0.1"
gunicorn = "^20.1.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

